PanIndia/force-app/main/default/objects/Contact/fields/Insurances__c.field-meta.xml
<CustomField>
    <fullName>Insurances__c</fullName>
    <label>Insurances</label>
    <summaryForeignKey>Insurance__c.Insurer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>