PanIndia/force-app/main/default/objects/Contact/fields/Roll_up_for_Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_for_Insurance_Status__c</fullName>
    <label>Roll up for Insurance Status</label>
    <summaryFilterItems>
        <field>Insurance__c.Status__c</field>
        <operation>equals</operation>
        <value>In-Forced</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Insurance__c.Status__c</field>
        <operation>equals</operation>
        <value>Surrendered</value>
    </summaryFilterItems>
    <summaryForeignKey>Insurance__c.Insurer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>