PanIndia/force-app/main/default/objects/Contact/fields/Total_No_Of_Policy__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Policy__c</fullName>
    <label>Total No Of Policy</label>
    <summaryFilterItems>
        <field>Insurance__c.Insurance_Type__c</field>
        <operation>equals</operation>
        <value>Life Insurance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Insurance__c.Insurance_Type__c</field>
        <operation>equals</operation>
        <value>Motor Insurance</value>
    </summaryFilterItems>
    <summaryForeignKey>Insurance__c.Insurer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>